# IonNet

./: !  .gitignore  .nfs0000000353b60a7800000027  assests.py  config.py  mgclassifierv2.py  utils.py
Interface_grid/: CMakeCache.txt  CMakeLists.txt  GraphInterface.cpp  GraphInterface.h  InterfaceGrid.cbp  InterfaceGrid.cc  InterfaceGrid.h  InterfacePointCloud.cc  InterfacePointCloud.h  Makefile  MolecularInterface.cc  MolecularInterface.h  README.md  cmake_install.cmake  interface.cc  interface2grid  interface_pc.cc  surf_interface.cc  utility_classes.py
Interface_grid/cnpy/: CMakeCache.txt  CMakeLists.txt  CNPY.cbp  Makefile  cmake_install.cmake  example1
inference/: ProbePDBParser.py  dccTest.py  inferencePipeline.py  inference_config.py  inference_utils.py  multi_foxs.py  scoper_pipeline.py
inference/pdb_processing/: Makefile  generatePDB.cc
models/: models.py  training.py
models/trained_models/: wandering-tree-178.pt  wandering-tree-178_config.npy
preprocessing/: dataset.py  kfold_creator.py  preprocess_utils.py  testsplit_config.py  train_test_split.py  transforms.py
scripts/data_cleaning/: pairwise_similarity.py
scripts/scoper_scripts/: RNAVIEW.tar  addHydrogens.pl  addHydrogensColab.pl  foxs  multi_foxs_combination
testing/: plotFit1.pl  plotting_functions.py  test_utils.py
